rvpadman@gmail.com/src/objects/RP_Summary__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Last_Revised__c</fullName>
        <label>Last Revised</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Summary_Intro__c</fullName>
        <label>Summary Intro</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_Links__c</fullName>
        <label>Summary Links</label>
        <type>Url</type>
    </fields>
    <label>RP Summary</label>
    <pluralLabel>RP_Summary</pluralLabel>
</CustomObject>